data/test_cases/groovy/GROOVY-8319/GROOVY8319.groovy
def m() {
    def a  = 1
    Integer[] b = [a] // error: 'a' treats like an Object
}